FIX: scroll visible

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,7 +67,7 @@ canvas {
 .page {
   width: 100%;
   display: flex;
-  height: calc(100vh - 55px);
+  height: calc(100vh - 62px);
   position: relative;
   justify-content: center;
   align-items: center;
